[package]
name = "wasm_example"
version = "0.1.0"
edition = "2021"
authors = ["Artyom K <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
